# Python_Web_HW10

./: README.md  pyproject.toml
notes/: .env
notes/notes/: settings.py
notes/quotes/templatetags/: extract_authors.py
notes/users/: urls.py  views.py
notes/users/templates/users/: signin.html
